# navanchauhan.github.io

./: .gitignore  .googlecb0897d479c87d97 2.html.icloud  .googlecb0897d479c87d97 3.html.icloud  .googlecb0897d479c87d97 4.html.icloud  .googlecb0897d479c87d97 5.html.icloud  .googlecb0897d479c87d97 6.html.icloud  .googlecb0897d479c87d97 7.html.icloud  .styles 2.css.icloud  .styles 3.css.icloud  CNAME  Makefile  feed 2.rss  feed 4.rss  feed.rss  generate_me.py  index 3.html  index 4.html  index.html  manifest 2.json  manifest.json  markdown3.py  pwabuilder-sw 2.js  pwabuilder-sw 3.js  pwabuilder-sw-register.js  pwabuilder-sw.js  pyproject.toml  requirements.txt  sitemap 4.xml  sitemap.xml  styles 2.css  styles.css  toot_me.py
AlphaTheme/: styles.css
Content/: index.md
Content/3D-Designs/: 2024-02-17-Can-Holder-Mountain-Bike.md  index.md
Content/about/: index.md
Content/colophon/: index.md
Content/ideas/: 2022-12-17-ar-mr-xr.md  index.md
Content/posts/: 2010-01-24-experiments.md  2019-05-05-Custom-Snowboard-Anemone-Theme.md  (+44 more)
Resources/: CNAME  manifest.json
Themes/: styles 2.css  styles.css
about/: index 4.html  index.html
assets/: compare.css  compare.js  disqus 2.js  disqus.js  manifest.plist
docs/: feed.rss  index.html
helper_libs/: image_utils.py
posts/: index 2.html  index 3.html  index 4.html  index.html
publications/: index 4.html  index.html
sass/: c-hyde.scss
tags/: index 4.html  index.html
templates/: base.html  feed.rss  head_tag.html  header.html  index.html  post.html  section.html  sidebar.html
tutorials/: index.html
(+284 files in other folders)
